--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>Bienvenidos a <%= title %></h3>
-    <p>El portal donde podra crear sus propios juegos!</p>
+    <p>El portal donde podrá crear sus propios juegos!</p>
     <p><a href="/quizes/question">Comience a jugar</a></p>
   </body>
 </html>
