--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,8 +30,8 @@
   </section>
 
   <footer class="main"  id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
-     ¿Que es un Quiz?</a>
+    <a href="https://github.com/hcorteszu/hcz-quiz-2015">
+     URL del proyecto hcz-quiz-2015 en GITHUB</a>
   </footer>
   </div>
   </body>
