--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,7 @@
 <div id="page-wrap">
   <header class="main" id="h1">
     <h2>Quiz: el juego de las preguntas</h2>
+    <h3>        Versión con Postgres </h3>
   </header>
 
   <nav class="main" id="n1" role="navigation">
