--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"><title>Quiz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
   <link rel='stylesheet'
         type='text/css'
@@ -22,17 +23,20 @@
 
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
-    <span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/quizes">Preguntas</a></span>
     <span><a href="/quizes/author">Créditos</a></span>
   </nav>
 
   <section class="main" id="s1">
-  <div><%- body %></div>
-  </section>
+  <div> <%- body %>
+  </div> 
+  </section>  
 
   <footer class="main"  id="f1">
     <a href="https://github.com/hcorteszu/hcz-quiz-2015">
-     URL del proyecto hcz-quiz-2015 en GITHUB</a>
+     URL del proyecto hcz-quiz-2015 en GITHUB<br></a>
+    <a href="https://es.wikipedia.org/wiki/Quiz">
+     ¿Que es un Quiz?</a>
   </footer>
   </div>
   </body>
