hcz versión con Postgres y preguntas múltiples 2

--- a/views/quizes/author.ejs
+++ b/views/quizes/author.ejs
@@ -1,4 +1,4 @@
-    <form method="get" action="/quizes/question">
+    <form method="get" action="/quizes">
       Autor 1: Heriberto Cortés <p>
       Autor 2: Heriberto Cortés <p>
       <img src="/images/hcz-foto.jpg" WIDTH=140 HEIGHT=210  ALT="Mi foto">
