--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -6,6 +6,7 @@
 <% var i; for (i=0; i < quizes.length; i++) {  %>
    <tr><td><a href="quizes/<%= quizes[i].id  %>">
    <%= quizes[i].pregunta %></a></td>
+   <%if(session.user){%>
    <td><a href="quizes/<%= quizes[i].id  %>/edit">
    <button>Editar</button></a></td>
    <td>
@@ -15,6 +16,7 @@
    </button>
    </form>
    </td>
+   <%}%>
    </tr>
    <% } %>
  </table>
@@ -23,7 +25,9 @@
     <input type="submit" value="Buscar" />
  </form>
  <br> <p>
+ <%if(session.user){%>
      <a href="/quizes/new"><button type="button">Crear pregunta</button></a>  
+ <%}%>
  </div>
  </body>
  </html>
