--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -4,15 +4,15 @@
 <div style="text-align:center;">
 <table>
 <% var i; for (i=0; i < quizes.length; i++) {  %>
-   <tr><td><a href="quizes/<%= quizes[i].id  %>">
+  <tr>
+   <td><a href="quizes/<%= quizes[i].id  %>">
    <%= quizes[i].pregunta %></a></td>
    <%if(session.user){%>
    <td><a href="quizes/<%= quizes[i].id  %>/edit">
    <button>Editar</button></a></td>
    <td>
       <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-       <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">borrar
-   </tr>   
+       <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar
    </button>
    </form>
    </td>
@@ -20,14 +20,14 @@
    </tr>
    <% } %>
  </table>
- <form method="get" action="/quizes"> 
-    <input type="text" name="search" value="Busqueda de pregunta" />
-    <input type="submit" value="Buscar" />
- </form>
- <br> <p>
+  <br> <p/>
  <%if(session.user){%>
      <a href="/quizes/new"><button type="button">Crear pregunta</button></a>  
  <%}%>
  </div>
+ <form method="get" action="/quizes"> 
+    <input type="text" name="search" value="Busqueda de pregunta" />
+    <input type="submit" value="Buscar" />
+ </form>
  </body>
  </html>
